--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,37 @@
 /build/
 /node_modules/
 /npm-debug.log
+
+# logs
+logs
+*.log
+npm-debug.log*
+
+# deployment
+codeship.aes
+deploy.env
+tmp
+
+# runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# mac
+.DS_Store
+
+# dependency directories
+node_modules
+
+# optional npm cache directory
+.npm
+
+# build directory
+dist
+
+# intellij
+.idea
+
+# vscode
+.vscode
