--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-core": "^6.23.1",
     "babel-loader": "^6.3.2",
     "babel-preset-env": "^1.2.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-stage-3": "^6.22.0",
     "chai": "^3.5.0",
     "css-loader": "^0.26.2",
@@ -47,5 +48,9 @@
     "webpack-core": "^0.6.9",
     "webpack-dev-server": "^2.4.1"
   },
-  "license": "UNLICENSED"
+  "license": "UNLICENSED",
+  "dependencies": {
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2"
+  }
 }
