--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "css-loader": "^0.26.2",
     "eslint": "^3.17.0",
     "eslint-loader": "^1.3.0",
+    "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
     "html-webpack-plugin": "^2.19.0",
     "http-server": "^0.9.0",
@@ -51,6 +52,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "react": "^15.4.2",
-    "react-dom": "^15.4.2"
+    "react-dom": "^15.4.2",
+    "react-router-dom": "^4.0.0"
   }
 }
