--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "eslint-loader": "^1.3.0",
     "eslint-plugin-react": "^6.10.3",
     "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.19.0",
     "http-server": "^0.9.0",
     "karma": "^1.5.0",
@@ -51,6 +52,7 @@
   },
   "license": "UNLICENSED",
   "dependencies": {
+    "classnames": "^2.2.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.3",
